redirect fixed, also password resets get deleted now in schedule

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -110,6 +110,11 @@ body{
 #login-error-message-box{
     display: none;
 }
+
+#passwort-reset-error-message-box{
+    display: none;
+}
+
 /* passwort reset */
 #passwort-reset-success-message-box{
     display: none;
