--- a/public/css/style.css
+++ b/public/css/style.css
@@ -188,6 +188,7 @@ body{
     width: 120px;
 }
 
+.category-name-column-width,
 .themebox-name-column-width{
     width: 300px;
 }
@@ -530,6 +531,7 @@ h2{
     margin-top: -50px;
 }
 
+.btn-create-cateogry,
 .btn-create-themebox{
     margin-left: 25px;
 }
