--- a/public/css/filter.css
+++ b/public/css/filter.css
@@ -15,6 +15,12 @@
     margin: 0;
 }
 
+#resetCategoryFilterBtn {
+    white-space: normal; /* Allow text to wrap onto multiple lines */
+    width: auto; /* Set width to auto for dynamic width based on content */
+    height: 50px;
+}
+
 #dropdown1, #dropdown1 ~ .multiselect-container, #dropdown1 ~ .multiselect-container li {
     cursor: pointer;
 }
