--- a/public/css/filter.css
+++ b/public/css/filter.css
@@ -17,9 +17,9 @@
 
 #resetCategoryFilterBtn {
     white-space: normal; /* Allow text to wrap onto multiple lines */
-    width: auto; /* Set width to auto for dynamic width based on content */
-    height: 50px;
-    margin-left: 10px;
+    font-size: 12px;
+    margin: -20px 25px 25px 25px;
+    display: none;
 }
 
 #dropdown1, #dropdown1 ~ .multiselect-container, #dropdown1 ~ .multiselect-container li {
