--- a/public/css/filter.css
+++ b/public/css/filter.css
@@ -10,14 +10,13 @@
 }
 
 .multiselect-container {
-    border-radius: 0px; /* Set border-radius to 0 to remove rounded corners */
+    border-radius: 0;
     padding: 0;
     margin: 0;
 }
 
 #resetCategoryFilterBtn {
-    white-space: normal; /* Allow text to wrap onto multiple lines */
-    /* bold */
+    white-space: normal;
     font-weight: bold;
     font-size: 12px;
     margin: -20px 25px 25px 25px;
@@ -39,22 +38,19 @@
     box-shadow: none;
     outline: 0;
     border-color: #CCCCCC;
-    background-color: white; /* Set the background color when dropdown is open */
+    background-color: white;
 }
-
 
 
 .multiselect-container > li > a > label:hover {
-    background-color: #1967d2; /* Default Bootstrap hover color */
-    color: white; /* Optional: Set text color to white for better visibility */
+    background-color: #1967d2;
+    color: white;
 }
 
 .multiselect-container > li > a > label:active {
-    background-color: #1967d2; /* Default Bootstrap active color */
-    color: white; /* Optional: Set text color to white for better visibility */
+    background-color: #1967d2;
+    color: white;
 }
-
-
 
 
 .multiselect-container > li > a.multiselect-all label {
