--- a/public/css/style.css
+++ b/public/css/style.css
@@ -196,6 +196,7 @@ body{
     cursor: pointer;
     height: 30px;
     margin-left: 15px;
+    margin-right: 15px;
     display: block;
     width: 100px;
     padding-left: 5px;
