major update, calendar now displays the correct time also in month

--- a/public/css/calendar/fullcalendar.css
+++ b/public/css/calendar/fullcalendar.css
@@ -18,7 +18,6 @@ body .fc { /* extra precedence to overcome jqui */
 	font-size: 1em;
 }
 
-
 /* Colors
 --------------------------------------------------------------------------------------------------*/
 
@@ -1491,4 +1490,12 @@ be a descendant of the grid when it is being dragged.
 
 .fc-unthemed .fc-list-empty { /* theme will provide own background */
 	background-color: #eee;
+}
+
+.fc-time2 {
+	display: none;
+}
+
+.fc-content > .fc-time {
+	display: none;
 }
