--- a/public/css/simple-sidebar.css
+++ b/public/css/simple-sidebar.css
@@ -143,10 +143,14 @@ body {
         margin-right: 5px;
     }
 
-    /* Hide text in sidebar */
     .nav-text {
         visibility: hidden;
     }
+
+    .dataTables_filter{
+        margin-top: 30px;
+    }
+
 }
 
 
