--- a/public/css/style.css
+++ b/public/css/style.css
@@ -326,6 +326,7 @@ body{
     height: 20px;
     width: 20px;
     background-color: #FEC5BF;
+    border: 1px solid #bfbfbf;
 }
 
 #order-calendar-legend-new{
@@ -333,6 +334,7 @@ body{
     height: 20px;
     width: 20px;
     background-color: #A7EBC3;
+    border: 1px solid #bfbfbf;
 }
 
 #order-calendar-legend-blocked-period{
@@ -340,6 +342,7 @@ body{
     height: 20px;
     width: 20px;
     background-color: #ffe6b3;
+    border: 1px solid #bfbfbf;
 }
 
 #order-calendar-legend-free{
@@ -351,8 +354,8 @@ body{
 }
 
 .order-calendar-legend-text{
-    width: 120px;
-    padding-left: 25px;
+    width: 90px;
+    padding-left: 30px;
     white-space: nowrap;
 }
 
