some fixes i guess

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -486,6 +486,14 @@ h2{
     font-size: 4em;
 }
 
+.panel-heading {
+    text-align: center;
+}
+
+.panel-footer {
+    text-align: center;
+}
+
 .button-modal{
     float: right;
 }
