--- a/public/css/simple-sidebar.css
+++ b/public/css/simple-sidebar.css
@@ -123,6 +123,7 @@ body {
     #sidebar-wrapper {
         left: 0;
         margin-left: 0;
+        overflow-x: hidden;
     }
 
     #wrapper.toggled #sidebar-wrapper {
